Remove transform on animation to stop overflow

--- a/src/scss/elements/animation.scss
+++ b/src/scss/elements/animation.scss
@@ -36,11 +36,11 @@
 @keyframes fade-up {
 	0% {
 		opacity: 0;
-		transform: translateY(10px);
+		//transform: translateY(10px);
 	}
 	100% {
 		opacity: 1;
-		transform: translateY(0);
+		//transform: translateY(0);
 	}
 }
 
